# GBG-Group-B

./: .gitignore  README.md
tasks/airport-lost-found-system/: .env.example  .gitignore  README.md  docker-compose.yml
tasks/azure-ai-document-intelligence-studio/: README.md  requirements.txt
tasks/azure-ai-document-intelligence-studio-latest/: README.md  app.py
tasks/chat with database/: .env.example  README.md
tasks/chat with database last version/: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  test cases.txt
tasks/chat-with-graph-database-task-1-chemistry/: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
tasks/chat-with-graph-database-task-1-chemistry/data/: chemistry_seed.cypher
tasks/chat-with-graph-database-task-1-chemistry/scripts/: seed_graph.py
tasks/chat-with-graph-database-task-1-chemistry/src/chemgraph_chat/: __init__.py  config.py  cypher_guard.py  db.py  llm.py  pipeline.py  schema.py  seed.py  serialization.py
tasks/chat-with-graph-database-task-1-chemistry/tests/: test_cypher_guard.py  test_llm_prompt.py  test_pipeline.py  test_seed_smoke.py  test_serialization.py
tasks/hybrid-graph-rag-pdf-chat/: .env.example  .gitignore  README.md  docker-compose.yml  requirements.txt  streamlit_app.py
tasks/task 1/: .env.example  .gitignore  README.md  app.py  requirements.txt
tasks/task 2/: .env.example  .gitignore  README.md  app.py  index_newcont.py  requirements.txt
tasks/task 3 /: README.md
tasks/task 4/: .env.example  .gitignore  PROJECT_PLAN.md  README.md  ai_pipeline.py  (+6 more)
(+266 files in other folders)
