[project]
name = "chemgraph-chat"
version = "0.1.0"
description = "Local Streamlit chat app for a Neo4j chemistry graph."
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.36.0",
    "neo4j>=5.20.0",
    "openai>=1.99.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

